--- a/style.css
+++ b/style.css
@@ -1,39 +1,131 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
-  }
-  
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #000000; /* Cor de fundo escura para melhor visualização da transição */
-  }
- 
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Silkscreen:wght@400;700&display=swap');
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: 'Silkscreen', sans-serif;
+}
+
+#container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  gap: 20px
+}
+
+.question-container {
+  height: 200px;
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.question-container input {
+  width: 20em;
+  padding: 1em 2em;
+  border-radius: 5px;
+}
+
+
+
+.question-container button {
+  font-size: 12px;
+  padding: 5px 0;
+  width: 100px;
+  margin: 0 auto;
+  font-family: 'Silkscreen', sans-serif;
+
+}
+
+.meme-container {
+  background-color: rgb(0, 0, 0);
+  width: 100vw;
+  /* min-height: 50vh; */
+  max-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 0;
+}
+
+.meme-container img {
+  max-height: 70%;
+  max-width: 100%;
+}
+
+/* footer ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+} */
+
+footer {
+  margin: auto;
+  text-align: center;
+}
+
+footer ul {
+  list-style: none;
+  padding: 0;
+}
+
+
+
+
+
+
+/* 
+#container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #000000;
+  Cor de fundo escura para melhor visualização da transição
+}
+
 .question {
-    padding: 30px;
+  padding: 30px;
+  margin: 150px 0;
 }
 
 .question input {
-    display: block;
+  display: block;
 }
 
 input {
-    size: 530px;
-    margin: 10px 0;
+  size: 530px;
+  margin: 10px 0;
 }
 
-  img {
-    max-width: 100%;
-    max-height: 100%;
-    transform: scale(0);
-    transition: transform 2s ease-in-out;
-  }
-  
-.main {
-    width: 70%;
-    margin: 0 40px;
+img {
+  max-width: 100%;
+  max-height: 100%;
+  transform: scale(0);
+  transition: transform 2s ease-in-out;
 }
+
+.main {
+  width: 70%;
+  margin: 0 40px;
+}
+
+.img_meme {
+  opacity: 0;
+  transition: opacity 2s ease-in-out;
+}
+
+.img_meme.mostrar {
+  opacity: 1;
+} */
