--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Silkscreen:wght@400;700&display=swap');
 
-body,
-html {
+*,
+*:after,
+*:before {
   margin: 0;
   padding: 0;
-  height: 100%;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+body,
+html {
+  width: 100%;
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
   font-family: 'Silkscreen', sans-serif;
 }
 
@@ -13,19 +23,23 @@ html {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
   gap: 20px
 }
 
 .question-container {
-  height: 200px;
-  width: 50vw;
+  min-height: 200px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
+}
+
+.question-container h1.easter-egg {
+  color: #fff;
+  font-size: 2.25rem;
 }
 
 .question-container input {
@@ -34,45 +48,69 @@ html {
   border-radius: 5px;
 }
 
-
-
 .question-container button {
   font-size: 12px;
   padding: 5px 0;
   width: 100px;
   margin: 0 auto;
   font-family: 'Silkscreen', sans-serif;
-
+  transition: 300ms;
+  cursor: pointer;
 }
 
+
 .meme-container {
-  background-color: rgb(0, 0, 0);
-  width: 100vw;
-  /* min-height: 50vh; */
-  max-height: 50vh;
+  width: 100%;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 0;
+  padding: 2rem .5rem;
+}
+
+.initialhidden {
+  display: none;
 }
 
 .meme-container img {
-  max-height: 70%;
+  background-color: rgba(0, 0, 0, .1);
+  box-shadow: 2px 2px 12px 1px #333;
+  border-radius: 4px;
+  max-height: 100%;
   max-width: 100%;
 }
 
-/* footer ul {
-  list-style: none;
+.link_box {
+  width: auto;
+  flex-direction: row;
   display: flex;
-  flex-direction: column;
+  flex-wrap: nowrap;
   align-items: center;
+  justify-content: center;
+  text-align: center;
+  text-decoration: none;
+  gap: 2px;
+  color: #333;
+}
 
-} */
+.link_box a {
+  cursor: pointer;
+  opacity: 0.7;
+  transition: 300ms ease-in-out;
+}
+
+.link_box a:hover {
+  opacity: 1;
+}
 
 footer {
-  margin: auto;
+  width: 100%;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 1rem .5rem;
 }
 
 footer ul {
@@ -129,3 +167,124 @@ img {
 .img_meme.mostrar {
   opacity: 1;
 } */
+
+#loading {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  transition: 300ms ease-in;
+}
+
+#loading.hidden {
+  display: none;
+}
+
+#loading span {
+  color: #333;
+  font-size: .75rem;
+}
+
+.lds-roller {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.lds-roller div {
+  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  transform-origin: 40px 40px;
+}
+
+.lds-roller div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: #000;
+  margin: -4px 0 0 -4px;
+}
+
+.lds-roller div:nth-child(1) {
+  animation-delay: -0.036s;
+}
+
+.lds-roller div:nth-child(1):after {
+  top: 63px;
+  left: 63px;
+}
+
+.lds-roller div:nth-child(2) {
+  animation-delay: -0.072s;
+}
+
+.lds-roller div:nth-child(2):after {
+  top: 68px;
+  left: 56px;
+}
+
+.lds-roller div:nth-child(3) {
+  animation-delay: -0.108s;
+}
+
+.lds-roller div:nth-child(3):after {
+  top: 71px;
+  left: 48px;
+}
+
+.lds-roller div:nth-child(4) {
+  animation-delay: -0.144s;
+}
+
+.lds-roller div:nth-child(4):after {
+  top: 72px;
+  left: 40px;
+}
+
+.lds-roller div:nth-child(5) {
+  animation-delay: -0.18s;
+}
+
+.lds-roller div:nth-child(5):after {
+  top: 71px;
+  left: 32px;
+}
+
+.lds-roller div:nth-child(6) {
+  animation-delay: -0.216s;
+}
+
+.lds-roller div:nth-child(6):after {
+  top: 68px;
+  left: 24px;
+}
+
+.lds-roller div:nth-child(7) {
+  animation-delay: -0.252s;
+}
+
+.lds-roller div:nth-child(7):after {
+  top: 63px;
+  left: 17px;
+}
+
+.lds-roller div:nth-child(8) {
+  animation-delay: -0.288s;
+}
+
+.lds-roller div:nth-child(8):after {
+  top: 56px;
+  left: 12px;
+}
+
+@keyframes lds-roller {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
